[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/BackgroundEarth.png" type="Texture" id=2]
[ext_resource path="res://scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/akashi.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/MCprod_Rumpure.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Sprite" type="Sprite" parent="Camera2D"]
texture = ExtResource( 2 )

[node name="AboutButton" type="Button" parent="."]
margin_left = 179.0
margin_top = -18.0
margin_right = 290.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
text = "About"
flat = true

[node name="BackButton" type="Button" parent="."]
visible = false
margin_left = -512.0
margin_top = -305.0
margin_right = -417.0
margin_bottom = -263.0
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
text = "Back"
flat = true

[node name="EditorButton" type="Button" parent="."]
margin_left = -118.0
margin_top = 73.0
margin_right = 119.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
text = "Editor (Alpha)"
flat = true

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -71.0
margin_right = 135.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
text = "Play"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="AboutButton" to="." method="_on_About_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="EditorButton" to="." method="_on_EditorButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_Play_Button_pressed"]
